--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Oh My Nosh</title>
 <style>
-  /* Color palette */
   :root {
     --dusty-rose: #c08081;
     --sage-green: #9ba997;
@@ -14,7 +13,6 @@
     --light-text: #ffffff;
   }
 
-  /* Reset */
   * {
     margin: 0;
     padding: 0;
@@ -61,9 +59,8 @@
     letter-spacing: 0.05em;
   }
 
-  /* Social Icons Container */
   .social-icons {
-    margin-top: 12px;
+    margin-top: 20px;
     text-align: center;
   }
 
@@ -107,8 +104,8 @@
 
   .products-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-    gap: 30px;
+    grid-template-columns: repeat(auto-fit,minmax(140px,1fr));
+    gap: 20px;
   }
 
   .product-card {
@@ -129,11 +126,10 @@
   .product-card img {
     max-width: 100%;
     border-radius: 10px;
-    margin: 0 auto;
     display: block;
+    margin: 0 auto;
   }
 
-  /* Contact Form */
   form {
     background-color: var(--light-text);
     padding: 25px;
@@ -151,7 +147,8 @@
   }
 
   form input,
-  form textarea {
+  form textarea,
+  form select {
     width: 100%;
     padding: 10px 14px;
     margin-bottom: 20px;
@@ -163,7 +160,8 @@
   }
 
   form input:focus,
-  form textarea:focus {
+  form textarea:focus,
+  form select:focus {
     outline: none;
     border-color: var(--dusty-rose);
     box-shadow: 0 0 8px var(--dusty-rose);
@@ -200,12 +198,64 @@
     font-size: 34px;
     line-height: 60px;
     box-shadow: 0 6px 14px rgba(0,0,0,0.3);
+    cursor: pointer;
+    z-index: 1001;
     transition: background-color 0.3s ease;
-    z-index: 1000;
   }
-
   .whatsapp-float:hover {
     background-color: var(--dusty-rose);
+  }
+
+  /* Modal Overlay */
+  .modal-overlay {
+    position: fixed;
+    display: none;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgba(0,0,0,0.4);
+    z-index: 2000;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-overlay.active {
+    display: flex;
+  }
+
+  /* Modal Content */
+  .modal {
+    background: var(--light-text);
+    border-radius: 12px;
+    padding: 25px;
+    max-width: 400px;
+    width: 90%;
+    box-shadow: 0 6px 15px rgba(156, 137, 137, 0.3);
+    position: relative;
+  }
+
+  .modal h3 {
+    margin-bottom: 20px;
+    color: var(--dusty-rose);
+    font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
+  }
+
+  .modal form label {
+    font-weight: 600;
+    margin-bottom: 6px;
+    display: block;
+  }
+
+  .modal form input {
+    margin-bottom: 15px;
+  }
+
+  .modal .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 22px;
+    font-weight: 700;
+    color: var(--dusty-rose);
+    cursor: pointer;
   }
 
   /* Responsive */
@@ -229,21 +279,9 @@
     <a href="#cakes-cookies">Cakes & Cookies</a>
     <a href="#cake-pops">Cake Pops</a>
     <a href="#dessert-jars">Dessert Jars</a>
+    <a href="#kids-baking">Kids Baking Class</a>
     <a href="#contact">Contact</a>
   </nav>
-
-  <div class="social-icons" aria-label="Social media links">
-    <a href="https://www.instagram.com/ohmynoshh?igsh=eWVsbW05Nzh0b25t" target="_blank" rel="noopener" aria-label="Instagram">
-      <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-        <path d="M7.75 2A5.75 5.75 0 002 7.75v8.5A5.75 5.75 0 007.75 22h8.5A5.75 5.75 0 0022 16.25v-8.5A5.75 5.75 0 0016.25 2h-8.5zm0 1.5h8.5A4.25 4.25 0 0120.5 7.75v8.5a4.25 4.25 0 01-4.25 4.25h-8.5A4.25 4.25 0 013 16.25v-8.5A4.25 4.25 0 007.75 3.5zm4.25 3a4.25 4.25 0 100 8.5 4.25 4.25 0 000-8.5zm0 1.5a2.75 2.75 0 110 5.5 2.75 2.75 0 010-5.5zm4.86-.66a1.04 1.04 0 11-2.08 0 1.04 1.04 0 012.08 0z"/>
-      </svg>
-    </a>
-    <a href="https://www.facebook.com/share/1A6DKycvdV/" target="_blank" rel="noopener" aria-label="Facebook">
-      <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-        <path d="M22 12a10 10 0 10-11.5 9.87v-6.99H8.75v-2.88h1.75v-2.2c0-1.73 1.04-2.69 2.64-2.69.77 0 1.58.14 1.58.14v1.74h-.89c-.88 0-1.15.54-1.15 1.1v1.33h1.96l-.31 2.88h-1.65v6.99A10 10 0 0022 12z"/>
-      </svg>
-    </a>
-  </div>
 </header>
 
 <main>
@@ -284,6 +322,38 @@
     <div class="products-grid" id="dessert-jars-grid"></div>
   </section>
 
+  <!-- Kids Baking Class Section -->
+  <section id="kids-baking" aria-label="Kids Baking Class">
+    <h2>Kids Baking Class</h2>
+    <div class="products-grid" id="kids-baking-grid"></div>
+
+    <h3>Book a Kids Baking Class</h3>
+    <form action="https://formspree.io/f/your-form-id" method="POST" aria-label="Kids baking class booking form">
+      <label for="child-name">Child's Name</label>
+      <input type="text" id="child-name" name="child-name" required placeholder="Child's full name" />
+
+      <label for="age-group">Age Group</label>
+      <select id="age-group" name="age-group" required>
+        <option value="" disabled selected>Select age group</option>
+        <option value="3-5 years">3-5 years</option>
+        <option value="6-8 years">6-8 years</option>
+        <option value="9-12 years">9-12 years</option>
+        <option value="13+ years">13+ years</option>
+      </select>
+
+      <label for="class-date">Desired Class Date</label>
+      <input type="date" id="class-date" name="class-date" required min="" />
+
+      <label for="parent-email">Parent's Email</label>
+      <input type="email" id="parent-email" name="parent-email" required placeholder="Parent or guardian email" />
+
+      <label for="message-kids">Additional Message (Optional)</label>
+      <textarea id="message-kids" name="message-kids" rows="4" placeholder="Any special requests or info"></textarea>
+
+      <button type="submit">Book Class</button>
+    </form>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact" aria-label="Contact Oh My Nosh">
     <h2>Contact Us</h2>
@@ -299,24 +369,47 @@
 
       <button type="submit">Send Message</button>
     </form>
+
+    <div class="social-icons" aria-label="Social media links">
+      <a href="https://www.instagram.com/ohmynoshh?igsh=eWVsbW05Nzh0b25t" target="_blank" rel="noopener" aria-label="Instagram">
+        <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+          <path d="M7.75 2A5.75 5.75 0 002 7.75v8.5A5.75 5.75 0 007.75 22h8.5A5.75 5.75 0 0022 16.25v-8.5A5.75 5.75 0 0016.25 2h-8.5zm0 1.5h8.5A4.25 4.25 0 0120.5 7.75v8.5a4.25 4.25 0 01-4.25 4.25h-8.5A4.25 4.25 0 013 16.25v-8.5A4.25 4.25 0 007.75 3.5zm4.25 3a4.25 4.25 0 100 8.5 4.25 4.25 0 000-8.5zm0 1.5a2.75 2.75 0 110 5.5 2.75 2.75 0 010-5.5zm4.86-.66a1.04 1.04 0 11-2.08 0 1.04 1.04 0 012.08 0z"/>
+        </svg>
+      </a>
+      <a href="https://www.facebook.com/share/1A6DKycvdV/" target="_blank" rel="noopener" aria-label="Facebook">
+        <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+          <path d="M22 12a10 10 0 10-11.5 9.87v-6.99H8.75v-2.88h1.75v-2.2c0-1.73 1.04-2.69 2.64-2.69.77 0 1.58.14 1.58.14v1.74h-.89c-.88 0-1.15.54-1.15 1.1v1.33h1.96l-.31 2.88h-1.65v6.99A10 10 0 0022 12z"/>
+        </svg>
+      </a>
+    </div>
   </section>
 
 </main>
 
 <!-- WhatsApp Floating Button -->
-<a
-  href="https://wa.me/27799750908"
-  target="_blank"
-  rel="noopener"
-  aria-label="Chat with Oh My Nosh on WhatsApp"
-  class="whatsapp-float"
->
-  &#x2709;
-</a>
+<div class="whatsapp-float" id="whatsappBtn" aria-label="Open WhatsApp enquiry form" role="button" tabindex="0">&#x2709;</div>
+
+<!-- WhatsApp Enquiry Modal -->
+<div class="modal-overlay" id="whatsappModal" role="dialog" aria-modal="true" aria-labelledby="whatsappModalTitle">
+  <div class="modal">
+    <div class="close-btn" id="closeModalBtn" role="button" tabindex="0" aria-label="Close WhatsApp enquiry form">&times;</div>
+    <h3 id="whatsappModalTitle">WhatsApp Enquiry</h3>
+    <form id="whatsappForm" novalidate>
+      <label for="wa-name">Name</label>
+      <input type="text" id="wa-name" name="wa-name" required placeholder="Your full name" />
+
+      <label for="wa-date">Desired Date</label>
+      <input type="date" id="wa-date" name="wa-date" required min="" />
+
+      <label for="wa-budget">Budget</label>
+      <input type="text" id="wa-budget" name="wa-budget" required placeholder="Your budget" />
+
+      <button type="submit">Send via WhatsApp</button>
+    </form>
+  </div>
+</div>
 
 <script>
-  // Load images with skipping missing files up to maxCount = 50.
-  // Stops after maxConsecutiveMisses = 5 images fail in a row.
   function loadImages(sectionId, baseName, maxCount = 50, maxConsecutiveMisses = 5) {
     const container = document.getElementById(sectionId);
     if (!container) return;
@@ -359,13 +452,90 @@
     tryLoadNext();
   }
 
-  document.addEventListener('DOMContentLoaded', function() {
+  // Set minimum date for date inputs as today
+  function setMinDate(id) {
+    const dateInput = document.getElementById(id);
+    if (!dateInput) return;
+    const today = new Date().toISOString().split('T')[0];
+    dateInput.min = today;
+  }
+
+  // Initialize image loading for all sections
+  document.addEventListener('DOMContentLoaded', () => {
     loadImages('cakes-grid', 'Cake');
     loadImages('cookies-grid', 'Cookies');
     loadImages('cupcakes-grid', 'Cupcake');
     loadImages('cakes-cookies-grid', 'Cake&Cookies');
     loadImages('cake-pops-grid', 'CakePops');
     loadImages('dessert-jars-grid', 'DessertJars');
+    loadImages('kids-baking-grid', 'Class');
+
+    setMinDate('class-date');
+    setMinDate('wa-date');
+
+    // WhatsApp modal functionality
+    const whatsappBtn = document.getElementById('whatsappBtn');
+    const modalOverlay = document.getElementById('whatsappModal');
+    const closeModalBtn = document.getElementById('closeModalBtn');
+    const whatsappForm = document.getElementById('whatsappForm');
+
+    whatsappBtn.addEventListener('click', () => {
+      modalOverlay.classList.add('active');
+      document.getElementById('wa-name').focus();
+    });
+
+    closeModalBtn.addEventListener('click', () => {
+      modalOverlay.classList.remove('active');
+      whatsappForm.reset();
+    });
+
+    modalOverlay.addEventListener('click', (e) => {
+      if (e.target === modalOverlay) {
+        modalOverlay.classList.remove('active');
+        whatsappForm.reset();
+      }
+    });
+
+    // Keyboard accessibility for close button and WhatsApp btn
+    closeModalBtn.addEventListener('keydown', e => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        e.preventDefault();
+        closeModalBtn.click();
+      }
+    });
+    whatsappBtn.addEventListener('keydown', e => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        e.preventDefault();
+        whatsappBtn.click();
+      }
+    });
+
+    whatsappForm.addEventListener('submit', (e) => {
+      e.preventDefault();
+
+      // Validate inputs
+      const name = document.getElementById('wa-name').value.trim();
+      const date = document.getElementById('wa-date').value;
+      const budget = document.getElementById('wa-budget').value.trim();
+
+      if (!name || !date || !budget) {
+        alert('Please fill all the fields before sending your enquiry.');
+        return;
+      }
+
+      // Construct WhatsApp URL with message
+      const phoneNumber = '27979750908'; // South Africa country code (27) + number without leading 0
+      const message = encodeURIComponent(
+        `Hello Oh My Nosh! I would like to enquire about your services.\nName: ${name}\nDesired Date: ${date}\nBudget: ${budget}`
+      );
+
+      const whatsappURL = `https://wa.me/${phoneNumber}?text=${message}`;
+
+      window.open(whatsappURL, '_blank');
+
+      modalOverlay.classList.remove('active');
+      whatsappForm.reset();
+    });
   });
 </script>
 
