--- a/index.html
+++ b/index.html
@@ -110,54 +110,6 @@
     display: block;
     margin: 0 auto;
   }
-  form {
-    background-color: var(--light-text);
-    padding: 25px;
-    border-radius: 12px;
-    box-shadow: 0 6px 15px rgba(156, 137, 137, 0.2);
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  form label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: 600;
-    color: var(--dusty-rose);
-  }
-  form input,
-  form textarea,
-  form select {
-    width: 100%;
-    padding: 10px 14px;
-    margin-bottom: 20px;
-    border: 1.5px solid var(--sage-green);
-    border-radius: 8px;
-    font-size: 1rem;
-    font-family: inherit;
-    transition: border-color 0.3s ease;
-  }
-  form input:focus,
-  form textarea:focus,
-  form select:focus {
-    outline: none;
-    border-color: var(--dusty-rose);
-    box-shadow: 0 0 8px var(--dusty-rose);
-  }
-  form button {
-    background-color: var(--dusty-rose);
-    color: var(--light-text);
-    font-weight: 700;
-    padding: 14px 30px;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    font-size: 1.1rem;
-    letter-spacing: 0.05em;
-    transition: background-color 0.3s ease;
-  }
-  form button:hover {
-    background-color: var(--sage-green);
-  }
   /* WhatsApp Floating Button */
   .whatsapp-float {
     position: fixed;
@@ -197,7 +149,7 @@
     background: var(--light-text);
     border-radius: 12px;
     padding: 25px;
-    max-width: 400px;
+    max-width: 420px;
     width: 90%;
     box-shadow: 0 6px 15px rgba(156, 137, 137, 0.3);
     position: relative;
@@ -212,8 +164,39 @@
     margin-bottom: 6px;
     display: block;
   }
-  .modal form input {
-    margin-bottom: 15px;
+  .modal form input,
+  .modal form select,
+  .modal form textarea {
+    width: 100%;
+    padding: 10px 14px;
+    margin-bottom: 20px;
+    border: 1.5px solid var(--sage-green);
+    border-radius: 8px;
+    font-size: 1rem;
+    font-family: inherit;
+    transition: border-color 0.3s ease;
+  }
+  .modal form input:focus,
+  .modal form select:focus,
+  .modal form textarea:focus {
+    outline: none;
+    border-color: var(--dusty-rose);
+    box-shadow: 0 0 8px var(--dusty-rose);
+  }
+  .modal form button {
+    background-color: var(--dusty-rose);
+    color: var(--light-text);
+    font-weight: 700;
+    padding: 14px 30px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    font-size: 1.1rem;
+    letter-spacing: 0.05em;
+    transition: background-color 0.3s ease;
+  }
+  .modal form button:hover {
+    background-color: var(--sage-green);
   }
   .modal .close-btn {
     position: absolute;
@@ -223,14 +206,6 @@
     font-weight: 700;
     color: var(--dusty-rose);
     cursor: pointer;
-  }
-  /* Responsive */
-  @media (max-width: 480px) {
-    nav a {
-      display: block;
-      margin: 8px 0;
-      font-size: 1rem;
-    }
   }
 </style>
 </head>
@@ -251,7 +226,6 @@
 </header>
 
 <main>
-
   <!-- Cakes Section -->
   <section id="cakes" aria-label="Cakes">
     <h1>Cakes</h1>
@@ -292,50 +266,11 @@
   <section id="kids-baking" aria-label="Kids Baking Class">
     <h2>Kids Baking Class</h2>
     <div class="products-grid" id="kids-baking-grid"></div>
-
-    <h3>Book a Kids Baking Class</h3>
-    <form id="kidsBookingForm" aria-label="Kids baking class booking form" novalidate>
-      <label for="child-name">Child's Name</label>
-      <input type="text" id="child-name" name="child-name" required placeholder="Child's full name" />
-
-      <label for="age-group">Age Group</label>
-      <select id="age-group" name="age-group" required>
-        <option value="" disabled selected>Select age group</option>
-        <option value="3-5 years">3-5 years</option>
-        <option value="6-8 years">6-8 years</option>
-        <option value="9-12 years">9-12 years</option>
-        <option value="13+ years">13+ years</option>
-      </select>
-
-      <label for="class-date">Desired Class Date</label>
-      <input type="date" id="class-date" name="class-date" required min="" />
-
-      <label for="parent-email">Parent's Email</label>
-      <input type="email" id="parent-email" name="parent-email" required placeholder="Parent or guardian email" />
-
-      <label for="message-kids">Additional Message (Optional)</label>
-      <textarea id="message-kids" name="message-kids" rows="4" placeholder="Any special requests or info"></textarea>
-
-      <button type="submit" aria-label="Book Kids Baking Class via WhatsApp">Book Class via WhatsApp</button>
-    </form>
   </section>
 
   <!-- Contact Section -->
   <section id="contact" aria-label="Contact Oh My Nosh">
     <h2>Contact Us</h2>
-    <form id="contactForm" aria-label="Contact form" novalidate>
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required placeholder="Your full name" />
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required placeholder="your.email@example.com" />
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="5" required placeholder="Your message or order enquiry"></textarea>
-
-      <button type="submit" aria-label="Send message via WhatsApp">Send Message via WhatsApp</button>
-    </form>
-
     <div class="social-icons" aria-label="Social media links">
       <a href="https://www.instagram.com/ohmynoshh?igsh=eWVsbW05Nzh0b25t" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
         <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
@@ -349,7 +284,6 @@
       </a>
     </div>
   </section>
-
 </main>
 
 <!-- WhatsApp Floating Button -->
@@ -361,14 +295,16 @@
     <div class="close-btn" id="closeModalBtn" role="button" tabindex="0" aria-label="Close WhatsApp enquiry form">&times;</div>
     <h3 id="whatsappModalTitle">WhatsApp Enquiry</h3>
     <form id="whatsappForm" novalidate>
-      <label for="wa-name">Name</label>
-      <input type="text" id="wa-name" name="wa-name" required placeholder="Your full name" />
+      <label for="enquiry-type">Select Enquiry Type</label>
+      <select id="enquiry-type" name="enquiry-type" required aria-required="true">
+        <option value="" disabled selected>Select an option</option>
+        <option value="Weddings">Weddings</option>
+        <option value="Kids Baking Class">Kids Baking Class</option>
+        <option value="Birthday">Birthday</option>
+        <option value="General Enquiry">General Enquiry</option>
+      </select>
 
-      <label for="wa-date">Desired Date</label>
-      <input type="date" id="wa-date" name="wa-date" required min="" />
-
-      <label for="wa-budget">Budget</label>
-      <input type="text" id="wa-budget" name="wa-budget" required placeholder="Your budget" />
+      <div id="dynamic-fields"></div>
 
       <button type="submit" aria-label="Send WhatsApp enquiry">Send via WhatsApp</button>
     </form>
@@ -376,6 +312,7 @@
 </div>
 
 <script>
+  // Load images for product grids with correct base names
   function loadImages(sectionId, baseName, maxCount = 50, maxConsecutiveMisses = 5) {
     const container = document.getElementById(sectionId);
     if (!container) return;
@@ -391,9 +328,6 @@
       img.src = fileName;
       img.alt = baseName.replace(/[^a-zA-Z]/g, ' ') + ' ' + count;
       img.className = 'product-img';
-      img.style.borderRadius = '10px';
-      img.style.width = '100%';
-      img.style.marginBottom = '15px';
 
       img.onload = function() {
         consecutiveMisses = 0;
@@ -418,123 +352,188 @@
     tryLoadNext();
   }
 
-  // Set minimum date for date inputs as today
-  function setMinDate(id) {
-    const dateInput = document.getElementById(id);
-    if (!dateInput) return;
-    const today = new Date().toISOString().split('T')[0];
-    dateInput.min = today;
-  }
+  const imageSections = [
+    { id: 'cakes-grid', base: 'Cake' },
+    { id: 'cookies-grid', base: 'Cookie' },
+    { id: 'cupcakes-grid', base: 'Cupcake' },
+    { id: 'cakes-cookies-grid', base: 'Cake_Cookie' },
+    { id: 'cake-pops-grid', base: 'CakePop' },
+    { id: 'dessert-jars-grid', base: 'DessertJar' },
+    { id: 'kids-baking-grid', base: 'KidsBaking' }
+  ];
 
   document.addEventListener('DOMContentLoaded', () => {
-    loadImages('cakes-grid', 'Cake');
-    loadImages('cookies-grid', 'Cookie');
-    loadImages('cupcakes-grid', 'Cupcake');
-    loadImages('cakes-cookies-grid', 'Cake_Cookie');
-    loadImages('cake-pops-grid', 'CakePop');
-    loadImages('dessert-jars-grid', 'DessertJar');
-    loadImages('kids-baking-grid', 'KidsBaking');
+    imageSections.forEach(({id, base}) => loadImages(id, base));
+  });
 
-    setMinDate('class-date');
-    setMinDate('wa-date');
-
-    // WhatsApp Modal Handling
+  // WhatsApp modal controls and dynamic form fields
+  document.addEventListener('DOMContentLoaded', () => {
     const whatsappBtn = document.getElementById('whatsappBtn');
     const whatsappModal = document.getElementById('whatsappModal');
     const closeModalBtn = document.getElementById('closeModalBtn');
+    const enquiryTypeSelect = document.getElementById('enquiry-type');
+    const dynamicFieldsDiv = document.getElementById('dynamic-fields');
+    const whatsappForm = document.getElementById('whatsappForm');
+    const whatsappNumber = '27799750908';
 
     function openModal() {
       whatsappModal.classList.add('active');
       document.body.style.overflow = 'hidden';
-      document.getElementById('wa-name').focus();
+      enquiryTypeSelect.focus();
     }
 
     function closeModal() {
       whatsappModal.classList.remove('active');
       document.body.style.overflow = '';
       whatsappBtn.focus();
+      whatsappForm.reset();
+      dynamicFieldsDiv.innerHTML = '';
     }
 
     whatsappBtn.addEventListener('click', openModal);
-    whatsappBtn.addEventListener('keydown', (e) => {
+    whatsappBtn.addEventListener('keydown', e => {
       if(e.key === 'Enter' || e.key === ' ') openModal();
     });
 
     closeModalBtn.addEventListener('click', closeModal);
-    closeModalBtn.addEventListener('keydown', (e) => {
+    closeModalBtn.addEventListener('keydown', e => {
       if(e.key === 'Enter' || e.key === ' ') closeModal();
     });
 
-    whatsappModal.addEventListener('click', (e) => {
-      if (e.target === whatsappModal) closeModal();
+    whatsappModal.addEventListener('click', e => {
+      if(e.target === whatsappModal) closeModal();
     });
 
-    // WhatsApp enquiry form submission
-    document.getElementById('whatsappForm').addEventListener('submit', (e) => {
+    enquiryTypeSelect.addEventListener('change', () => {
+      const type = enquiryTypeSelect.value;
+      dynamicFieldsDiv.innerHTML = '';
+
+      if(type === 'Weddings') {
+        dynamicFieldsDiv.innerHTML = `
+          <label for="wedding-name">Name</label>
+          <input type="text" id="wedding-name" name="wedding-name" required aria-required="true" placeholder="Your Name" />
+
+          <label for="wedding-date">Wedding Date</label>
+          <input type="date" id="wedding-date" name="wedding-date" required aria-required="true" min="${new Date().toISOString().split('T')[0]}" />
+
+          <label for="wedding-details">Details (optional)</label>
+          <textarea id="wedding-details" name="wedding-details" rows="3" placeholder="Any special requests or info"></textarea>
+        `;
+      }
+      else if(type === 'Kids Baking Class') {
+        dynamicFieldsDiv.innerHTML = `
+          <label for="kids-name">Child's Name</label>
+          <input type="text" id="kids-name" name="kids-name" required aria-required="true" placeholder="Child's Name" />
+
+          <label for="kids-age">Child's Age</label>
+          <input type="number" id="kids-age" name="kids-age" required aria-required="true" min="3" max="18" placeholder="Age" />
+
+          <label for="kids-date">Preferred Class Date</label>
+          <input type="date" id="kids-date" name="kids-date" required aria-required="true" min="${new Date().toISOString().split('T')[0]}" />
+
+          <label for="kids-notes">Additional Notes</label>
+          <textarea id="kids-notes" name="kids-notes" rows="3" placeholder="Any special notes or questions"></textarea>
+        `;
+      }
+      else if(type === 'Birthday') {
+        dynamicFieldsDiv.innerHTML = `
+          <label for="birthday-name">Name</label>
+          <input type="text" id="birthday-name" name="birthday-name" required aria-required="true" placeholder="Your Name" />
+
+          <label for="birthday-date">Birthday Date</label>
+          <input type="date" id="birthday-date" name="birthday-date" required aria-required="true" min="${new Date().toISOString().split('T')[0]}" />
+
+          <label for="birthday-details">Details (optional)</label>
+          <textarea id="birthday-details" name="birthday-details" rows="3" placeholder="Any special requests or info"></textarea>
+        `;
+      }
+      else if(type === 'General Enquiry') {
+        dynamicFieldsDiv.innerHTML = `
+          <label for="general-name">Name</label>
+          <input type="text" id="general-name" name="general-name" required aria-required="true" placeholder="Your Name" />
+
+          <label for="general-message">Message</label>
+          <textarea id="general-message" name="general-message" rows="4" required aria-required="true" placeholder="Your message here"></textarea>
+        `;
+      }
+    });
+
+    whatsappForm.addEventListener('submit', (e) => {
       e.preventDefault();
 
-      const name = document.getElementById('wa-name').value.trim();
-      const date = document.getElementById('wa-date').value;
-      const budget = document.getElementById('wa-budget').value.trim();
-
-      if (!name || !date || !budget) {
-        alert('Please fill all the fields.');
+      const enquiryType = enquiryTypeSelect.value;
+      if (!enquiryType) {
+        alert('Please select an enquiry type.');
+        enquiryTypeSelect.focus();
         return;
       }
 
-      const message = encodeURIComponent(`Hello Oh My Nosh! I would like to enquire about your services.\nName: ${name}\nDesired Date: ${date}\nBudget: ${budget}`);
-      const whatsappNumber = '27799750908';
-      const whatsappURL = `https://wa.me/${whatsappNumber}?text=${message}`;
+      let message = `Hello Oh My Nosh! I have an enquiry for *${enquiryType}*.`;
 
-      window.open(whatsappURL, '_blank', 'noopener,noreferrer');
+      // Helper function to encode text for URL
+      function encode(text) {
+        return encodeURIComponent(text);
+      }
+
+      try {
+        if (enquiryType === 'Weddings') {
+          const name = document.getElementById('wedding-name').value.trim();
+          const date = document.getElementById('wedding-date').value;
+          const details = document.getElementById('wedding-details').value.trim();
+
+          if (!name || !date) {
+            alert('Please fill in required fields.');
+            return;
+          }
+          message += `%0AName: ${encode(name)}%0AWedding Date: ${encode(date)}`;
+          if(details) message += `%0ADetails: ${encode(details)}`;
+        }
+        else if (enquiryType === 'Kids Baking Class') {
+          const name = document.getElementById('kids-name').value.trim();
+          const age = document.getElementById('kids-age').value.trim();
+          const date = document.getElementById('kids-date').value;
+          const notes = document.getElementById('kids-notes').value.trim();
+
+          if (!name || !age || !date) {
+            alert('Please fill in required fields.');
+            return;
+          }
+          message += `%0AChild's Name: ${encode(name)}%0AChild's Age: ${encode(age)}%0APreferred Class Date: ${encode(date)}`;
+          if(notes) message += `%0AAdditional Notes: ${encode(notes)}`;
+        }
+        else if (enquiryType === 'Birthday') {
+          const name = document.getElementById('birthday-name').value.trim();
+          const date = document.getElementById('birthday-date').value;
+          const details = document.getElementById('birthday-details').value.trim();
+
+          if (!name || !date) {
+            alert('Please fill in required fields.');
+            return;
+          }
+          message += `%0AName: ${encode(name)}%0ABirthday Date: ${encode(date)}`;
+          if(details) message += `%0ADetails: ${encode(details)}`;
+        }
+        else if (enquiryType === 'General Enquiry') {
+          const name = document.getElementById('general-name').value.trim();
+          const msg = document.getElementById('general-message').value.trim();
+
+          if (!name || !msg) {
+            alert('Please fill in required fields.');
+            return;
+          }
+          message += `%0AName: ${encode(name)}%0AMessage: ${encode(msg)}`;
+        }
+      } catch {
+        alert('Please fill in the form correctly.');
+        return;
+      }
+
+      // Open WhatsApp chat with message
+      const whatsappUrl = `https://wa.me/${whatsappNumber}?text=${message}`;
+      window.open(whatsappUrl, '_blank');
+
+      // Close modal & reset form
       closeModal();
-      e.target.reset();
-    });
-
-    // Kids baking class booking form submission
-    document.getElementById('kidsBookingForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-
-      const childName = document.getElementById('child-name').value.trim();
-      const ageGroup = document.getElementById('age-group').value;
-      const classDate = document.getElementById('class-date').value;
-      const parentEmail = document.getElementById('parent-email').value.trim();
-      const messageExtra = document.getElementById('message-kids').value.trim();
-
-      if (!childName || !ageGroup || !classDate || !parentEmail) {
-        alert('Please fill all required fields.');
-        return;
-      }
-
-      const message = encodeURIComponent(
-        `Hello Oh My Nosh! I would like to book a Kids Baking Class.\nChild's Name: ${childName}\nAge Group: ${ageGroup}\nDesired Date: ${classDate}\nParent's Email: ${parentEmail}\nAdditional Info: ${messageExtra}`
-      );
-      const whatsappNumber = '27799750908';
-      const whatsappURL = `https://wa.me/${whatsappNumber}?text=${message}`;
-
-      window.open(whatsappURL, '_blank', 'noopener,noreferrer');
-      e.target.reset();
-    });
-
-    // Contact form submission
-    document.getElementById('contactForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-
-      const name = document.getElementById('name').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const messageText = document.getElementById('message').value.trim();
-
-      if (!name || !email || !messageText) {
-        alert('Please fill all fields.');
-        return;
-      }
-
-      const message = encodeURIComponent(`Hello Oh My Nosh! New enquiry:\nName: ${name}\nEmail: ${email}\nMessage: ${messageText}`);
-      const whatsappNumber = '27799750908';
-      const whatsappURL = `https://wa.me/${whatsappNumber}?text=${message}`;
-
-      window.open(whatsappURL, '_blank', 'noopener,noreferrer');
-      e.target.reset();
     });
   });
 </script>
