--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
     <a href="#cakes">Cakes</a>
     <a href="#cookies">Cookies</a>
     <a href="#cupcakes">Cupcakes</a>
-    <a href="#cakes-cookies">Cakes & Cookies</a>
-    <a href="#cake-pops">Cake Pops</a>
-    <a href="#dessert-jars">Dessert Jars</a>
-    <a href="#kids-baking">Kids Baking Class</a>
+    <a href="#cakes-cookies">Cakes&Cookies</a>
+    <a href="#cake-pops">CakePops</a>
+    <a href="#dessert-jars">DessertJars</a>
+    <a href="#kids-baking">Class</a>
     <a href="#contact">Contact</a>
   </nav>
 </header>
