--- a/index.html
+++ b/index.html
@@ -246,25 +246,25 @@
 
   <!-- Cakes & Cookies Section -->
   <section id="cakes-cookies" aria-label="Cakes and Cookies">
-    <h1>Cakes & Cookies</h1>
+    <h1>Cakes&Cookies</h1>
     <div class="products-grid" id="cakes-cookies-grid"></div>
   </section>
 
   <!-- Cake Pops Section -->
   <section id="cake-pops" aria-label="Cake Pops">
-    <h1>Cake Pops</h1>
+    <h1>CakePops</h1>
     <div class="products-grid" id="cake-pops-grid"></div>
   </section>
 
   <!-- Dessert Jars Section -->
   <section id="dessert-jars" aria-label="Dessert Jars">
-    <h1>Dessert Jars</h1>
+    <h1>DessertJars</h1>
     <div class="products-grid" id="dessert-jars-grid"></div>
   </section>
 
   <!-- Kids Baking Class Section -->
   <section id="kids-baking" aria-label="Kids Baking Class">
-    <h2>Kids Baking Class</h2>
+    <h2>Class</h2>
     <div class="products-grid" id="kids-baking-grid"></div>
   </section>
 
