--- a/index.html
+++ b/index.html
@@ -246,25 +246,25 @@
 
   <!-- Cakes & Cookies Section -->
   <section id="cakes-cookies" aria-label="Cakes and Cookies">
-    <h1>Cakes&Cookies</h1>
+    <h1>Cakes & Cookies</h1>
     <div class="products-grid" id="cakes-cookies-grid"></div>
   </section>
 
   <!-- Cake Pops Section -->
   <section id="cake-pops" aria-label="Cake Pops">
-    <h1>CakePops</h1>
+    <h1>Cake Pops</h1>
     <div class="products-grid" id="cake-pops-grid"></div>
   </section>
 
   <!-- Dessert Jars Section -->
   <section id="dessert-jars" aria-label="Dessert Jars">
-    <h1>DessertJars</h1>
+    <h1>Dessert Jars</h1>
     <div class="products-grid" id="dessert-jars-grid"></div>
   </section>
 
   <!-- Kids Baking Class Section -->
   <section id="kids-baking" aria-label="Kids Baking Class">
-    <h2>Class</h2>
+    <h2>Kids Baking Class</h2>
     <div class="products-grid" id="kids-baking-grid"></div>
   </section>
 
@@ -354,12 +354,12 @@
 
   const imageSections = [
     { id: 'cakes-grid', base: 'Cake' },
-    { id: 'cookies-grid', base: 'Cookie' },
+    { id: 'cookies-grid', base: 'Cookies' },
     { id: 'cupcakes-grid', base: 'Cupcake' },
-    { id: 'cakes-cookies-grid', base: 'Cake_Cookie' },
-    { id: 'cake-pops-grid', base: 'CakePop' },
-    { id: 'dessert-jars-grid', base: 'DessertJar' },
-    { id: 'kids-baking-grid', base: 'KidsBaking' }
+    { id: 'cakes-cookies-grid', base: 'Cake&Cookie' },
+    { id: 'cake-pops-grid', base: 'CakePops' },
+    { id: 'dessert-jars-grid', base: 'DessertJars' },
+    { id: 'kids-baking-grid', base: 'Class' }
   ];
 
   document.addEventListener('DOMContentLoaded', () => {
