--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <a href="#cakes">Cakes</a>
     <a href="#cookies">Cookies</a>
     <a href="#cupcakes">Cupcakes</a>
-    <a href="#cakes-cookies">Cakes&Cookies</a>
+    <a href="#cakes-cookies">Cake&Cookies</a>
     <a href="#cake-pops">CakePops</a>
     <a href="#dessert-jars">DessertJars</a>
     <a href="#kids-baking">Class</a>
@@ -356,7 +356,7 @@
     { id: 'cakes-grid', base: 'Cake' },
     { id: 'cookies-grid', base: 'Cookies' },
     { id: 'cupcakes-grid', base: 'Cupcake' },
-    { id: 'cakes-cookies-grid', base: 'Cake&Cookie' },
+    { id: 'cakes-cookies-grid', base: 'Cake&Cookies' },
     { id: 'cake-pops-grid', base: 'CakePops' },
     { id: 'dessert-jars-grid', base: 'DessertJars' },
     { id: 'kids-baking-grid', base: 'Class' }
