--- a/index.html
+++ b/index.html
@@ -430,19 +430,47 @@
         <label for="date">Wedding Date</label>
         <input type="date" id="date" name="date" required min="${new Date().toISOString().split('T')[0]}" />
 
+        <label for="budget">Budget</label>
+        <input type="text" id="budget" name="budget" placeholder="e.g. R5000 - R10000" />
+
         <label for="details">Details (optional)</label>
         <textarea id="details" name="details" rows="3" placeholder="Additional information"></textarea>
       `;
-    } else if(val === 'Kids Baking Class' || val === 'Birthday') {
+    } else if(val === 'Kids Baking Class') {
       dynamicFieldsDiv.innerHTML = `
         <label for="name">Name</label>
         <input id="name" name="name" required />
 
         <label for="date">Date</label>
         <input type="date" id="date" name="date" required min="${new Date().toISOString().split('T')[0]}" />
+
+        <label for="age-group">Age Group</label>
+        <select id="age-group" name="age-group" required>
+          <option value="" disabled selected>Select age group</option>
+          <option value="3-5 years">3-5 years</option>
+          <option value="6-8 years">6-8 years</option>
+          <option value="9-12 years">9-12 years</option>
+        </select>
+
+        <label for="num-children">Number of Children</label>
+        <input type="number" id="num-children" name="num-children" min="1" required />
+      `;
+    } else if(val === 'Birthday') {
+      dynamicFieldsDiv.innerHTML = `
+        <label for="name">Name</label>
+        <input id="name" name="name" required />
+
+        <label for="date">Date</label>
+        <input type="date" id="date" name="date" required min="${new Date().toISOString().split('T')[0]}" />
+
+        <label for="budget">Budget</label>
+        <input type="text" id="budget" name="budget" placeholder="e.g. R3000 - R7000" />
       `;
     } else if(val === 'General Enquiry') {
       dynamicFieldsDiv.innerHTML = `
+        <label for="budget">Budget</label>
+        <input type="text" id="budget" name="budget" placeholder="Optional" />
+
         <label for="msg">Message</label>
         <textarea id="msg" name="msg" required rows="4"></textarea>
       `;
@@ -452,24 +480,51 @@
   whatsappForm.addEventListener('submit', function(e) {
     e.preventDefault();
     const type = enquiryTypeSelect.value;
+    if(!type) {
+      alert('Please select an enquiry type.');
+      return;
+    }
     let text = `Hello Oh My Nosh! I have an enquiry about *${type}*.`;
 
     if(type === 'General Enquiry') {
+      const budget = document.getElementById('budget').value.trim();
       const msg = document.getElementById('msg').value.trim();
       if(!msg) {
         alert('Please enter your message.');
         return;
       }
+      if(budget) {
+        text += `%0ABudget: ${encodeURIComponent(budget)}`;
+      }
       text += `%0A%0AMessage: ${encodeURIComponent(msg)}`;
-    } else {
+    } else if(type === 'Kids Baking Class') {
       const name = document.getElementById('name').value.trim();
       const date = document.getElementById('date').value.trim();
+      const ageGroup = document.getElementById('age-group').value;
+      const numChildren = document.getElementById('num-children').value.trim();
+
+      if(!name || !date || !ageGroup || !numChildren) {
+        alert('Please fill in all required fields.');
+        return;
+      }
+      text += `%0AName: ${encodeURIComponent(name)}`;
+      text += `%0ADate: ${encodeURIComponent(date)}`;
+      text += `%0AAge Group: ${encodeURIComponent(ageGroup)}`;
+      text += `%0ANumber of Children: ${encodeURIComponent(numChildren)}`;
+    } else { // Weddings or Birthday
+      const name = document.getElementById('name').value.trim();
+      const date = document.getElementById('date').value.trim();
+      const budget = document.getElementById('budget') ? document.getElementById('budget').value.trim() : '';
+
       if(!name || !date) {
         alert('Please fill in all required fields.');
         return;
       }
       text += `%0AName: ${encodeURIComponent(name)}`;
       text += `%0ADate: ${encodeURIComponent(date)}`;
+      if(budget) {
+        text += `%0ABudget: ${encodeURIComponent(budget)}`;
+      }
       if(type === 'Weddings') {
         const details = document.getElementById('details').value.trim();
         if(details) text += `%0ADetails: ${encodeURIComponent(details)}`;
